--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: test
         run: go test ./...
       - name: build
-        run: go build ./cmd/...
+        run: go build ./cli/...
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
